test/resources/ValidPrograms/const_folding_example.lo
class Main(){
  int main(){
    return (((1 + 2) * (3 + 1)) % 5); // ((3) * (4)) % 5 = 12 % 5 = 2
  }
}
