test/resources/InvalidPrograms/test_9.lo
// bad test case
// Duplicate Main
// Author: Aaron Wollman (Summer 2021)

class Main() {
    int main(){
        {
            return 1;
        }
    }
}

class Main() {
    int main(){
        {
            return 5;
        }
    }
}